2004-04-08 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b20

	* Bugfix: #916453 and #920740 

	* Change: Beautified HTML Output in edit_appearance.php.

	* Change: moved selectOptions() from util.php into lib/Form.php
	
	* Fix: values in selectOptions() are not again translated.
	       This should be only be done in the call.

	* Little Wording Changes in configdata

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.4-cvs-b19

	* Fixed size image frames for offline mode in case it is later viewed
	  with Safari/Opera.

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.4-cvs-b18

	* Bugfix: Don't show no-permission subalbum that is preceded by a hidden photo.

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.4-cvs-b17

	* Same fix as -b16 for Opera.

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.4-cvs-b16

	* Bugfix: Image frames on Safari.

2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b15

	* Bugfix: When Gallery runs on PHP >=4.3.0 slideshow for modern Browser were broken
                  in several languages, due to unsupported Charset in html_entity_decode().

2004-04-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b14

	* Change: Merge the Safari/Opera fix forward from RC1

2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b13

	* New: Added css class 'viewcounter' for those who want the
	       "viewed XXX times in a special format.

2004-04-06 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b12

	* Bugfix: Added missing ; in watermark_album

	* Change: UI Change from Sections to Tabs in Config Wizard.
		  Details in setup/functions.inc.

	* Change: Fixed wrong use of gallery_error().

	* Bugfix: $GLOBALS['user_prefix'] was not used when embedded in phpnuke or nsnnuke.

2004-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b11

	* Change: Variable checks to remove PHP5 warning messages in devMode.
	  No functional changes.

2004-04-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b10
