@@ -1,3 +1,10 @@
+2004-04-08 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b21
+
+	* Change: Little wording changes in configwizard.
+
+	* Change: Moved drawSelect(), makeFormIntro(), formVar() and emptyFormVar() 
+		  from util.php to lib/Form.php
+
 2004-04-08 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b20
 
 	* Bugfix: #916453 and #920740 
